--- a/steellady/package.json
+++ b/steellady/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@emailjs/react-native": "^4.2.2",
+    "@google-recaptcha/react": "^1.2.3",
     "@splidejs/react-splide": "^0.7.12",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.7",
     "cleave.js": "^1.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-helmet-async": "^2.0.5",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.27.0"
