--- a/steellady/package.json
+++ b/steellady/package.json
@@ -16,6 +16,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.7",
     "cleave.js": "^1.6.0",
+    "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
