--- a/steellady/package.json
+++ b/steellady/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "steellady",
+  "name": "steel",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -27,20 +27,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@types/aos": "^3.0.7",
-    "@types/css-modules": "^1.0.5",
-    "@types/node": "^22.8.2",
-    "@types/react": "^18.3.11",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.13",
+    "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
-    "sass": "^1.80.6",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.9",
-    "vite-plugin-sass": "^0.1.0"
+    "sass-embedded": "^1.81.0",
+    "vite": "^5.4.10"
   }
 }
