--- a/steellady/package.json
+++ b/steellady/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@emailjs/react-native": "^4.2.2",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@google-recaptcha/react": "^1.2.3",
+    "@mui/material": "^6.1.10",
     "@splidejs/react-splide": "^0.7.12",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.7",
